add faq and alert modals

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="Description" content="XXX">
 
 	<link href="/css/main.css" rel="stylesheet">
+	<link href="/css/faq_warning.css" rel="stylesheet">
 </head>
 
 <body>
@@ -1040,6 +1041,68 @@
 
 	</div>
 	<!--trial end-->
+
+
+
+	<!--FAQ-->
+	<div class="faq-modal">
+
+		<div class="faq-content">
+			<div class="faq-item">
+				<h4 class="faq-item__question">Q: Is the cost for the extension a one time fee or is it monthly?</h4>
+				<p class="faq-item__answer">A: The cost is one time fee. You don't need to pay for anything else. All the features of the extension are included.</p>
+			</div>
+
+			<div class="faq-item">
+				<h4 class="faq-item__question">Q: I've bought the extension, how to use it?</h4>
+				<p class="faq-item__answer">A: Open the Amazon web site, search for some products, hit the extension button. You'll see popup with a loader. After few seconds there will appear information about found products.</p>
+			</div>
+
+			<div class="faq-item">
+				<h4 class="faq-item__question">Q: Are estimated values monthly, daily or yearly?</h4>
+				<p class="faq-item__answer">A: Estimated values are monthly.</p>
+			</div>
+
+			<div class="faq-item">
+				<h4 class="faq-item__question">Q: How the estimated values computes?</h4>
+				<p class="faq-item__answer">A: These values are computing using formula based on Amazon top level category (f.e. Home & Garden, Books) and rank in one of these categories.</p>
+			</div>
+
+			<div class="faq-item">
+				<h4 class="faq-item__question">Q: What does the Net column mean?</h4>
+				<p class="faq-item__answer">A: Net column means price after FBA Fee subtraction and 15% subtraction of Amazon Referral Fee. If FBA Fee unavailable, net price computes by formula.</p>
+			</div>
+
+			<div class="faq-item">
+				<h4 class="faq-item__question">Q: What does the LQS column mean?</h4>
+				<p class="faq-item__answer">A: LQS is Listing Quality Score. AMZScout analizes many product description criteria and computes score for it. Higher score means higher position in search results. To see details point cursor on LQS value.</p>
+			</div>
+
+			<div class="faq-item">
+				<h4 class="faq-item__question">Q: What does the RPR column mean?</h4>
+				<p class="faq-item__answer">A: RPR is revenue per review. Greater RPR means better selling opportunities on Amazon.</p>
+			</div>
+
+			<div class="faq-item">
+				<h4 class="faq-item__question">Q: Is FBA Fee computing for piece or for volume?</h4>
+				<p class="faq-item__answer">A: FBA Fee is computing for piece with storage fee included for 1 month. It's computing based on shipping size and shipping weight taken from product page.</p>
+			</div>
+		</div>
+
+		<a href="#" class="btn btn--grey btn--square faq-close"><i class="i-close"></i></a>
+	</div>
+	<!--FAQ end-->
+
+	<!--ALERT-->
+	<div class="alert-modal">
+
+		<div class="alert-content">
+			<h2>Я че-то нажала и все удалилось.</h2>
+		</div>
+
+		<a href="#" class="btn btn--grey btn--square alert-close"><i class="i-close"></i></a>
+	</div>
+	<!--ALERT end-->
 
 </div>
 
